--- a/thinknest/src/app/globals.css
+++ b/thinknest/src/app/globals.css
@@ -8,7 +8,7 @@ body {
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: 0 0% 95%;
     --foreground: 0 0% 3.9%;
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
@@ -71,5 +71,22 @@ body {
   }
 }
 
+@layer base {
+  .dark .navbar-icon {
+    filter: invert(1);
+  }
+  .dark .navbar-icon-active {
+    filter: none;
+  }
+}
 
+@layer base {
+  .dark .settings-background {
+    background-color: #333;
+  }
+}
+
+.dark .settings-container {
+  background-color: #1e1e2e; /* Alternativ dunkleres Grau */
+}
 
